[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
error-chain = "0.12.4"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
